replace custom SeqExpr with CVariableDeclarations when declaring global, local and param substitutes
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/modular-partial-order-reduction@48083 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c